--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "scripts": {
     "start": "node index.js",
     "dev": "npx @modelcontextprotocol/inspector node ./build/index.js",
-    "build": "tsc"
+    "build": "tsc",
+    "backend:dev": "cd backend && npm run dev",
+    "backend:build": "cd backend && npm run build",
+    "backend:start": "cd backend && npm start"
   },
   "files": [
     "build"
